CREATE DATABASE my_db;

USE my_db;

CREATE TABLE employees (

	employee_id INT NOT NULL AUTO_INCREMENT,
	type VARCHAR(255) NOT NULL,
	user_id INT NOT NULL,
	PRIMARY KEY (employee_id)
	
);

CREATE TABLE users (

	user_id INT NOT NULL AUTO_INCREMENT,
	first_name VARCHAR(255) NOT NULL,
	last_name VARCHAR(255) NOT NULL,
	email VARCHAR(255) NOT NULL,
	password VARCHAR(255) NOT NULL,
	PRIMARY KEY (user_id)
	
);

CREATE TABLE carts (

	cart_id INT NOT NULL AUTO_INCREMENT,
	status VARCHAR(255) NOT NULL,
	user_id INT NOT NULL,
	delivery_id INT NOT NULL,
	PRIMARY KEY (cart_id)
	
);

CREATE TABLE deliveries (

	delivery_id INT NOT NULL AUTO_INCREMENT,
	delivery_time DATETIME NOT NULL,
	PRIMARY KEY (delivery_id)
	
);

CREATE TABLE inventory (

	inventory_id INT NOT NULL AUTO_INCREMENT,
	product_id VARCHAR(255) NOT NULL,
	cart_id VARCHAR(255) NOT NULL,
	order_id VARCHAR(255) NOT NULL,
	PRIMARY KEY (inventory_id)
	
);

CREATE TABLE products (

	product_id INT NOT NULL AUTO_INCREMENT,
	name VARCHAR(255) NOT NULL,
	price DECIMAL(13,2) NOT NULL,
	type VARCHAR(255) NOT NULL,
	PRIMARY KEY (product_id)
	
);

CREATE TABLE orders (

	order_id INT NOT NULL AUTO_INCREMENT,
	user_id VARCHAR(255) NOT NULL,
	PRIMARY KEY (order_id)
	
);

INSERT INTO employees
	(employee_id, type, user_id)
VALUES
	(NULL, "manager", 1),
	(NULL, "associate", 2),
	(NULL, "admin", 3);
	
INSERT INTO users
	(user_id, first_name, last_name, email, password)
VALUES
	(NULL, "John", "Smith", "jsmith@example.com", "temp_password");

INSERT INTO products
	(product_id, name, price, type)
VALUES
	(NULL, "Oranges", "0.25", "produce"),
	(NULL, "Carrots", "0.25", "produce"),
	(NULL, "Watermelon", "2.00", "produce"),
	(NULL, "Potatoes", "0.25", "produce"),
	(NULL, "Onions", "0.50", "produce"),
	(NULL, "Chick Peas", "1.00", "canned_foods"),
	(NULL, "Cream", "1.50", "canned_foods"),
	(NULL, "Chicken Noodle Soup", "1.50", "canned_foods"),
	(NULL, "Olives", "1.00", "canned_foods"),
	(NULL, "Fava Beans", "1.00", "canned_foods"),
	(NULL, "Fish Fillets", "5.00", "frozen_foods"),
	(NULL, "Blueberry Waffles", "5.00", "frozen_foods"),
	(NULL, "Pizza", "7.00", "frozen_foods"),
	(NULL, "Taquitos", "10.00", "frozen_foods"),
	(NULL, "Bacon Egg and Cheese Croissant", "8.00", "frozen_foods"),
	(NULL, "Peanut Butter Crackers", "4.50", "snacks"),
	(NULL, "Chips", "4.00", "snacks"),
	(NULL, "Cookies", "5.00", "snacks"),
	(NULL, "Crackers", "3.50", "snacks"),
	(NULL, "Cheese Puffs", "4.00", "snacks");
	
INSERT INTO inventory
	(inventory_id, product_id, cart_id, order_id)
VALUES
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 1, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 2, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 3, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 4, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 5, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 6, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 7, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 8, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 9, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 10, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 11, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 12, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 13, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 14, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 15, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 16, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 17, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 18, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 19, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0),
	(NULL, 20, 0, 0);
